<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.alves.pampaimoveis.LoginActivity">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="112dp"
        android:layout_height="93dp"
        app:srcCompat="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/description_image_pampa_imoveis" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_string_email"
        android:inputType="textEmailAddress"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIcon" />

    <EditText
        android:id="@+id/editTextPassWord"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_string_password"
        android:inputType="textPassword"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/buttonSignIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="sendLoginData"
        android:text="@string/string_button_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassWord" />

    <Button
        android:id="@+id/buttonSignUp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:onClick="callSignUp"
        android:text="@string/string_button_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/buttonForgotPassWord"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:onClick="callRecoverPassword"
        android:text="@string/string_button_forgot_password"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />



    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/buttonForgotPassWord"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>

</ScrollView>