<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:layout_editor_absoluteX="0dp"
tools:layout_editor_absoluteY="0dp"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.alves.pampaimoveis.ProfileActivity"
tools:showIn="@layout/activity_profile">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextNameProfileView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/hint_string_name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUserProfileView" />

    <EditText
        android:id="@+id/editTextCelProfileView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/hint_string_phone"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailProfileView" />

    <EditText
        android:id="@+id/editTextEmailProfileView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/hint_string_email"
        android:inputType="textEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameProfileView" />

    <EditText
        android:id="@+id/editTextPassWordProfileView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="25dp"
        android:ems="10"
        android:hint="@string/informe_sua_senha"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextCelProfileView" />

<!--
    <Button
        android:id="@+id/buttonSignUp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="sendSignUpDataToDb"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/string_button_sign_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />



    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_text_sign_in_with_google"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.0" />

        -->

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPassPhrase"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp" />

    <TextView
        android:id="@+id/textViewProfileImageProfileView"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:text="@string/esta_sua_a_sua_foto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewUserProfileView"
        android:layout_marginBottom="0dp"
        app:layout_constraintRight_toLeftOf="@+id/imageViewUserProfileView"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/informa_es_do_perfil"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/atualiza_o_de_senha"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassWordProfileView" />

    <EditText
        android:id="@+id/editTextNewPassPhrase"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nova_senha"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editTextRepeatPassPhrase"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/repita_a_nova_senha"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassPhrase" />

    <ImageView
        android:id="@+id/imageViewUserProfileView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:srcCompat="@mipmap/anonymous"
        android:contentDescription="@string/cont_m_imagem_de_usu_rio" />

</android.support.constraint.ConstraintLayout>
</ScrollView>
