<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.alves.pampaimoveis.CadastrarActivity">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/hint_string_name"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonUser" />

        <EditText
            android:id="@+id/editTextCel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_string_phone"
            android:inputType="phone"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_string_email"
            android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCel" />

        <EditText
            android:id="@+id/editTextPassWord"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_string_password"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />


        <Button
            android:id="@+id/buttonSignUp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="sendSignUpDataToDb"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/string_button_sign_in"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <!--

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_text_sign_in_with_google"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintVertical_bias="0.0" />

            -->

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassWord" />

        <ImageButton
            android:id="@+id/imageButtonUser"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:onClick="pickImageProfile"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/anonymous" />

        <TextView
            android:id="@+id/textViewImageProfile"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="0dp"
            android:text="Selecione a foto do seu perfil"
            app:layout_constraintBottom_toBottomOf="@+id/imageButtonUser"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/imageButtonUser" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
